--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,61 @@
     transform: rotate(360deg);
   }
 }
+.actionbar{
+  width: 500px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.header_container {
+  background: black;
+  color: white;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.actionbox_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.prediction_container{
+  width: 300px;
+  border-radius: 4px;
+  font-size: 0.875rem;
+  background-color: rgb(255, 255, 255);
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 4px;
+  box-shadow: rgb(0 0 0 / 20%) 0px 3px 1px -2px, rgb(0 0 0 / 14%) 0px 2px 2px 0px, rgb(0 0 0 / 12%) 0px 1px 5px 0px;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 0.875rem;
+    /* line-height: 60px; */
+  letter-spacing: 0.01071em;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.6);
+  height: 60px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+}
+
+.tool_bar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.prediction_heading {
+  font-weight: bold;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0px;
+}
